# serenity

./: README.md  generated-sources.json  meson.build  org.gnome.Example.json
2d/: camera.cpp  collisionbox.cpp  meson.build  painter.cpp  renderer.cpp  sprite.cpp  spritesheet.cpp  transform.cpp
2d/include/serenity/: 2d.hpp
2d/include/serenity/2d/: collisionbox.hpp  customrender.hpp  painter.hpp  renderer.hpp  sprite.hpp  spritesheet.hpp  transform.hpp
core/: component.cpp  entity.cpp  game.cpp  meson.build  scene.cpp
core/include/serenity/: component.hpp  core.hpp  entity.hpp  game.hpp  math.hpp  passthrough.hpp  scene.hpp
core/include/serenity/math/: collision.hpp  lerp.hpp  vec.hpp  vectypes.hpp
core/include/serenity/time/: ontick.hpp  timersystem.hpp
core/include/serenity/util/: _foreachm.hpp  _foreachm.un.hpp  _vec.internal.hpp  _vec.internal.un.hpp  _vecdef.hpp  _vecdef.un.hpp
example/: main.cpp  meson.build
example-launcher/: main.pl
examples/: meson.build
examples/camera/: smiley.hpp
examples/dontlookback/: main.cpp  meson.build  player.hpp  smiley.hpp  tilemap.ase
examples/input/: smiley.hpp
examples/launcher/: main.pl  meson.build
examples/lettuce/: main.cpp  meson.build
graphics/: meson.build  renderer.cpp
graphics/include/serenity/: graphics.hpp
graphics/include/serenity/graphics/: customrender.hpp  renderer.hpp
src/include/serenity/: core.hpp
src/include/serenity/time/: timersystem.hpp
